--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ compile_commands.json
 
 # QtCreator local machine specific files for imported projects
 *creator.user*
+
+bin/
+build/
+*.pb.*
+*.grpc.*
+
+html/
+latex/
