--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,16 @@ build/
 
 html/
 latex/
+
+# CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
